2003-09-18  Jeffrey Stedfast  <fejj@ximian.com>

	* e-msg-composer-attachment-bar.c: updated for
	CamelTransferEncoding namespace changes

	* e-msg-composer.c: updated for CamelTransferEncoding namespace
	changes

2003-09-18  Jeffrey Stedfast  <fejj@ximian.com>

	* e-msg-composer-attachment-bar.c:
	* e-msg-composer-attachment.c:
	* e-msg-composer.c: Updated for namespace changes in Camel.

2003-09-17  Not Zed  <NotZed@Ximian.com>

	** Merge in mail-refactor-2-branch

2003-09-15  Ettore Perazzoli  <ettore@ximian.com>

	* e-msg-composer-hdrs.c (header_new_recipient): Make the entry
	non-focusable again.  The right fix for A11Y is to add
	accelerators.

2003-09-11  Federico Mena Quintero  <federico@ximian.com>

	* e-msg-composer.h (EMsgComposer): Added an entry_uic field for a
	BonoboUIComponent for the non-control entries (e.g. the Subject
	line).

	* e-msg-composer.c (create_composer): Set autoactivate to true on
	the HTML control's BonoboControlFrame.
	(setup_ui): Create the composer->entry_uic.
	(destroy): Free the composer->entry_uic.
	(entry_verbs): New array of verbs for the non-control entries.
	Moved the Edit* verbs to here, as they should not be part of the
	main set.
	(composer_entry_focus_in_event_cb): Load
	evolution-composer-entries.xml here for the non-control entries' UI.
	(composer_entry_focus_out_event_cb): Remove the menu items.

2003-09-10  Not Zed  <NotZed@Ximian.com>

	* listener.c (impl_event): We want to use decode to stream for
	attachment parts.

2003-09-08  Not Zed  <NotZed@Ximian.com>

	* e-msg-composer.c (autosave_load_draft): ugh, direct linking to
	evolution-mail suckage.  Should these callbacks just be handled
	internally?
	(handle_multipart_encrypted, handle_multipart_signed)
	(handle_multipart_alternative, handle_multipart)
	(e_msg_composer_new_with_message): Use new em_utils stuff for
	message formatting.

2003-08-22  Antonio Xu  <antonio.xu@sun.com>

	* e-msg-composer-attachment.c (): Connect response signal to